Fixed getting task list by table id

--- a/backend/BackendApp/src/main/resources/application.properties
+++ b/backend/BackendApp/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.main.allow-bean-definition-overriding=true
 logback.access.enabled=true
+SerializationFeature.FAIL_ON_EMPTY_BEANS
